@@ -1,3 +1,10 @@
+2006-04-25  Chenthill Palanisamy  <pchenthill@novell.com>
+
+	Fix #341229
+	* calendar/e-cal-backend-exchange-calendar.c:
+	(modify_object_with_href): Set the old object so 
+	that it gets refreshed properly.
+
 2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>
 
 	Fixes #339561
